--- a/single-node/Train.ipynb
+++ b/single-node/Train.ipynb
@@ -4,7 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This module loads the data from data.py, creates a TensorFlow/Keras model from model.py, trains the model on the data, and then saves the best model."
+    "# Biomedical Image Segmentation with U-Net\n",
+    "\n",
+    "In this code example, we apply the U-Net architecture to segment brain tumors from raw MRI scans as shown below. With relatively little data we are able to train a U-Net model to accurately predict where tumors exist. \n",
+    "\n",
+    "The Dice coefficient (the standard metric for the BraTS dataset used in the study) for our model is about 0.82-0.88.  Menze et al. [reported](http://ieeexplore.ieee.org/document/6975210/) that expert neuroradiologists manually segmented these tumors with a cross-rater Dice score of 0.75-0.85, meaning that the model’s predictions are on par with what expert physicians have made."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/figure1.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since its introduction two years ago, the [U-Net](https://arxiv.org/pdf/1505.04597.pdf0) architecture has been used to create deep learning models for segmenting [nerves](https://github.com/jocicmarko/ultrasound-nerve-segmentation) in ultrasound images, [lungs](https://www.kaggle.com/c/data-science-bowl-2017#tutorial) in CT scans, and even [interference](https://github.com/jakeret/tf_unet) in radio telescopes.\n",
+    "\n",
+    "## What is U-Net?\n",
+    "U-Net is designed like an [auto-encoder](https://en.wikipedia.org/wiki/Autoencoder). It has an encoding path (“contracting”) paired with a decoding path (“expanding”) which gives it the “U” shape.  However, in contrast to the autoencoder, U-Net predicts a pixelwise segmentation map of the input image rather than classifying the input image as a whole. For each pixel in the original image, it asks the question: “To which class does this pixel belong?” This flexibility allows U-Net to predict different parts of the tumor simultaneously."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/unet.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This module loads the data from `data.py`, creates a TensorFlow/Keras model from `model.py`, trains the model on the data, and then saves the best model."
    ]
   },
   {
@@ -16,8 +51,10 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf \n",
+    "import datetime\n",
     "import time\n",
     "import os\n",
+    "from IPython.display import Image\n",
     "import settings    # Use the custom settings.py file for default parameters\n",
     "import onnxmltools\n",
     "\n",
@@ -34,7 +71,8 @@
     "\n",
     "print (\"We are using Tensorflow version\", tf.__version__,\\\n",
     "       \"with Intel(R) MKL\", \"enabled\" if tf.pywrap_tensorflow.IsMklEnabled() else \"disabled\",)\n",
-    "\n"
+    "\n",
+    "onnx = False # Set whether we are exporting to ONNX model and using nGraph"
    ]
   },
   {
@@ -51,88 +89,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Set the multi-threading parameters for TF and set session\n",
-    "config = tf.ConfigProto(intra_op_parallelism_threads=...,\n",
-    "                        inter_op_parallelism_threads=...)\n",
+    "#TODO: Set the multi-threading parameters for Tensorflow. \n",
+    "config = tf.ConfigProto(...) #TODO\n",
     "\n",
-    "sess = ... \n",
+    "sess = ... #TODO\n",
     "\n",
-    "K.backend.set_..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_and_predict(data_path, data_filename, batch_size, n_epoch, onnx=False):\n",
-    "    \"\"\"\n",
-    "    Create a model, load the data, and train it.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    \"\"\"\n",
-    "    Step 1: Load the data\n",
-    "    \"\"\"\n",
-    "    hdf5_filename = os.path.join(data_path, data_filename)\n",
-    "    print(\"-\" * 30)\n",
-    "    print(\"Loading the data from HDF5 file ...\")\n",
-    "    print(\"-\" * 30)\n",
-    "\n",
-    "    imgs_train, msks_train, imgs_validation, msks_validation = load_data(hdf5_filename)\n",
-    "\n",
-    "    print(\"-\" * 30)\n",
-    "    print(\"Creating and compiling model ...\")\n",
-    "    print(\"-\" * 30)\n",
-    "\n",
-    "    \"\"\"\n",
-    "    Step 2: Define the model\n",
-    "    \"\"\"\n",
-    "    model = load_model(imgs_train.shape, msks_train.shape)\n",
-    "\n",
-    "    model_filename, model_callbacks = get_callbacks()\n",
-    "\n",
-    "    \"\"\"\n",
-    "    Step 3: Train the model on the data\n",
-    "    \"\"\"\n",
-    "    print(\"-\" * 30)\n",
-    "    print(\"Fitting model with training data ...\")\n",
-    "    print(\"-\" * 30)\n",
-    "    \n",
-    "    if onnx:\n",
-    "        for i in range(0,30):\n",
-    "            print (\"Processing batch:\", i)\n",
-    "            start_time = time.time()\n",
-    "            model.train_on_batch(imgs_train[i*batch_size:batch_size*(i+1)-1], \\\n",
-    "                                 msks_train[i*batch_size:batch_size*(i+1)-1])\n",
-    "            print (\"Time for training on batch:\", time.time() - start_time) \n",
-    "\n",
-    "        # TODO: Convert the Keras model to ONNX and save it. \n",
-    "        onnx_model = ...\n",
-    "        onnxmltools... \n",
-    "    else:\n",
-    "        history = model.fit(imgs_train, msks_train,\n",
-    "                            batch_size=batch_size,\n",
-    "                            epochs=n_epoch,\n",
-    "                            validation_data=(imgs_validation, msks_validation),\n",
-    "                            verbose=1, shuffle=\"batch\",\n",
-    "                            callbacks=model_callbacks)\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Step 4: Evaluate the best model\n",
-    "    \"\"\"\n",
-    "    print(\"-\" * 30)\n",
-    "    print(\"Loading the best trained model ...\")\n",
-    "    print(\"-\" * 30)\n",
-    "\n",
-    "    model = evaluate_model(model_filename, imgs_validation, msks_validation)"
+    "K.backend.set_session(sess)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get some details on the processor of our system"
+    "## Training Time!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The bulk of the training section can be broken down in 4 simple steps:\n",
+    "1. Load the training data\n",
+    "1. Define the model\n",
+    "3. Train the model on the data\n",
+    "4. Evaluate the best model\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 1 : Loading the data"
    ]
   },
   {
@@ -141,57 +129,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lscpu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "print(\"Started script on {}\".format(datetime.datetime.now()))\n",
+    "hdf5_filename = os.path.join(args.data_path, args.data_filename)\n",
+    "print(\"-\" * 30)\n",
+    "print(\"Loading the data from HDF5 file ...\")\n",
+    "print(\"-\" * 30)\n",
     "\n",
-    "print(\"args = {}\".format(args))\n",
-    "os.system(\"uname -a\")\n",
-    "print(\"TensorFlow version: {}\".format(tf.__version__))\n",
+    "imgs_train, msks_train, imgs_validation, msks_validation = load_data(hdf5_filename)\n",
+    "\n",
+    "print(\"-\" * 30)\n",
+    "print(\"Creating and compiling model ...\")\n",
+    "print(\"-\" * 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 2: Define the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_model(imgs_train.shape, msks_train.shape)\n",
+    "model_filename, model_callbacks = get_callbacks()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code snippet below draws the model using Keras' built-in `plot_model`. Compare with the implementation of `model.py`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.utils.plot_model(model,\n",
+    "                          to_file='images/model.png',\n",
+    "                          show_shapes=False,\n",
+    "                          show_layer_names=True,\n",
+    "                          rankdir='TB'\n",
+    "                         )\n",
+    "Image('images/model.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 3: Train the model on the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"-\" * 30)\n",
+    "print(\"Fitting model with training data ...\")\n",
+    "print(\"-\" * 30)\n",
+    "\n",
+    "print(\"Step 3, training the model started at {}\".format(datetime.datetime.now()))\n",
     "start_time = time.time()\n",
     "\n",
-    "#TODO: Enable/Disable ONNX\n",
-    "train_and_predict(args.data_path, \n",
-    "                  args.data_filename,\n",
-    "                  args.batch_size, \n",
-    "                  args.epochs,\n",
-    "                  onnx=False)\n",
+    "if onnx:\n",
+    "    for i in range(0,30):\n",
+    "        print (\"Processing batch:\", i)\n",
+    "        start_time = time.time()\n",
+    "        model.train_on_batch(imgs_train[i*args.batch_size:args.batch_size*(i+1)-1], \\\n",
+    "                             msks_train[i*args.batch_size:args.batch_size*(i+1)-1])\n",
+    "        print (\"Time for training on batch:\", time.time() - start_time) \n",
     "\n",
-    "print(\"Total time elapsed for program = {} seconds\".format(time.time() - start_time))\n",
-    "print(\"Stopped script on {}\".format(datetime.datetime.now()))"
+    "        # TODO: Convert the Keras model to ONNX and save it. \n",
+    "        onnx_model = ... #TODO\n",
+    "        onnxmltools.utils.save_model(#TODO)\n",
+    "else:\n",
+    "    history = model.fit(imgs_train, msks_train,\n",
+    "                        batch_size=args.batch_size,\n",
+    "                        epochs=args.epochs,\n",
+    "                        validation_data=(imgs_validation, msks_validation),\n",
+    "                        verbose=1, shuffle=\"batch\",\n",
+    "                        callbacks=model_callbacks)\n",
+    "    \n",
+    "print(\"Total time elapsed for training = {} seconds\".format(time.time() - start_time))\n",
+    "print(\"Training finished at {}\".format(datetime.datetime.now()))\n",
+    "    \n",
+    "# Append training log\n",
+    "# with open(\"training.log\",\"a+\") as fp:\n",
+    "#     fp.write(\"{}: {}\\n\".format(datetime.datetime.now(),\n",
+    "#                              history.history[\"val_dice_coef\"]))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-    "you may not use this file except in compliance with the License.\n",
-    "You may obtain a copy of the License at\n",
-    "   http://www.apache.org/licenses/LICENSE-2.0\n",
-    "Unless required by applicable law or agreed to in writing, software\n",
-    "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-    "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-    "See the License for the specific language governing permissions and\n",
-    "limitations under the License.\n",
-    "\n",
-    "SPDX-License-Identifier: EPL-2.0\n"
+    "#### Step 4: Evaluate the best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"-\" * 30)\n",
+    "print(\"Loading the best trained model ...\")\n",
+    "print(\"-\" * 30)\n",
+    "model = evaluate_model(model_filename, imgs_validation, msks_validation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## End: In this tutorial, you have learnt:\n",
+    "* What is the U-Net model\n",
+    "* Comparing training times - Tensorflow_MKLDNN vs Tensorflow (stock)\n",
+    "* How to tweak a series of environment variables to get better performance out of MKLDNN\n",
+    "* How to tweak a series of Tensorflow-related and neural-network specific parameters for better performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. SPDX-License-Identifier: EPL-2.0`"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (IDP)",
    "language": "python",
-   "name": "python3"
+   "name": "idp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -203,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
