Add a small note about 20GB disk space requirement

--- a/single-node/Inference-Solution-Without-And-With-MKL.ipynb
+++ b/single-node/Inference-Solution-Without-And-With-MKL.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Upon running these steps you install OS and Python3 dependencies, clone the repo, download a subset of UNet dataset, pre-process the Decathlon data and store it in a new HDF5 file (convert_raw_to_hdf5.py). Then train a U-Net model (train.py). Finally, perform inference on a handful of MRI slices in the validation dataset (plot_inference_examples.py). \n",
+    "### Note: Running this setup requires a minimum of 20GB disk space. Upon running these steps you install OS and Python3 dependencies, clone the repo, download a subset of UNet dataset, pre-process the Decathlon data and store it in a new HDF5 file (convert_raw_to_hdf5.py). Then train a U-Net model (train.py). Finally, perform inference on a handful of MRI slices in the validation dataset (plot_inference_examples.py). \n",
     "\n",
     "```apt-get install python3.*-dev```\n",
     "\n",
@@ -35,7 +35,7 @@
     "\n",
     "```mv ../../144x144/ ../../data/```\n",
     "\n",
-    "### copy the Inference-Solution-Without-And-With-MKL.ipynb to current direcotry continue with running the rest of the Notebook"
+    "### Copy the Inference-Solution-Without-And-With-MKL.ipynb to current direcotry and continue with running the rest of the Notebook"
    ]
   },
   {
